--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
 		"format": "biome format --write ."
 	},
 	"dependencies": {
+		"@dnd-kit/core": "^6.3.1",
+		"@dnd-kit/modifiers": "^9.0.0",
+		"@dnd-kit/utilities": "^3.2.2",
 		"@tanstack/react-router": "^1.150.0",
 		"clsx": "^2.1.1",
+		"d3": "^7.9.0",
 		"neverthrow": "^8.2.0",
 		"react": "^19.2.3",
 		"react-dom": "^19.2.3",
@@ -32,6 +36,7 @@
 		"@testing-library/dom": "^10.4.1",
 		"@testing-library/jest-dom": "^6.9.1",
 		"@testing-library/react": "^16.3.1",
+		"@types/d3": "^7.4.3",
 		"@types/react": "^19.2.8",
 		"@types/react-dom": "^19.2.3",
 		"@vitejs/plugin-react": "^5.1.2",
